# schema.py

./: README.md  main.py  pyproject.toml
examples/: README.md  weather.py
wakurobotics/care/: __init__.py  client.py
wakurobotics/care/devices/v1/: __init__.py  aggregated_scalar_schema.py  aggregated_values_schema.py  connection_schema.py  error_schema.py  errorlog_schema.py  factsheet_schema.py  order_schema.py  values_schema.py
wakurobotics/care/devices/v1/shared/: __init__.py  position_schema.py  value_schema.py
